src/snapshots/alma__parser__tests__test_module_parser__type_pattern.snap
---
source: src/parser.rs
assertion_line: 3792
expression: "parse(\"\\\nmodule Test\n\nBanana = world\n\nPhone hello = world\n\")"
---
Input:

module Test

Banana = world

Phone hello = world


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Banana 13:19 13:19
            expr:
                Identifier world 22:27 22:27
        Untyped
            pattern:
                Phone 29:34 29:40
                    Identifier hello 35:40 35:40
            expr:
                Identifier world 43:48 43:48



