src/snapshots/alma__parser__tests__test_module_parser__type_pattern_qualified.snap
---
source: src/parser.rs
assertion_line: 3805
expression: "parse(\"\\\nmodule Test\n\nBanana.Phone = world\n\nBanana.Phone asdf = world\n\")"
---
Input:

module Test

Banana.Phone = world

Banana.Phone asdf = world


Result:

module Test
    exports:

    imports:
        Alma 0:6
            Float 0:6 0:6
            String 0:6 0:6
            Bool 0:6 (True 0:6, False 0:6) 0:6
    type_definitions:

    definitions:
        Untyped
            pattern:
                Banana.Phone 20:25 13:25
            expr:
                Identifier world 28:33 28:33
        Untyped
            pattern:
                Banana.Phone 42:47 35:52
                    Identifier asdf 48:52 48:52
            expr:
                Identifier world 55:60 55:60



