src/snapshots/alma__parser__tests__test_module_parser__types_and_definitions.snap
---
source: src/parser.rs
assertion_line: 2968
expression: "parse(\"\\\nmodule Test exposing (main)\n\ntype Fruit = Banana\n\nmain = Banana\n\")"
---
Input:

module Test exposing (main)

type Fruit = Banana

main = Banana


Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Export {
                span: Index(
                    1,
                ),
                typ: Identifier(
                    Identifier {
                        name: SymbolU32 {
                            value: 2,
                        },
                        span: Index(
                            1,
                        ),
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            Untyped(
                Pattern(
                    Pattern {
                        span: Index(
                            6,
                        ),
                        typ: Identifier(
                            Identifier {
                                name: SymbolU32 {
                                    value: 2,
                                },
                                span: Index(
                                    6,
                                ),
                            },
                        ),
                    },
                    Index(
                        0,
                    ),
                ),
            ),
        ],
        type_definitions: [
            TypeDefinition {
                span: Index(
                    5,
                ),
                name: CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 3,
                    },
                    span: Index(
                        2,
                    ),
                },
                vars: [],
                typ: Union {
                    constructors: [
                        Constructor {
                            span: Index(
                                4,
                            ),
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 4,
                                },
                                span: Index(
                                    3,
                                ),
                            },
                            params: [],
                        },
                    ],
                },
            },
        ],
    },
    [],
)

{
    Index(
        0,
    ): Expression {
        span: Index(
            9,
        ),
        typ: RefCell {
            value: None,
        },
        expr: Identifier {
            module: None,
            identifier: CapitalizedIdentifier(
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 4,
                    },
                    span: Index(
                        8,
                    ),
                },
            ),
        },
    },
}

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            4,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            7,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            6,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            10,
        ),
        end: Index(
            10,
        ),
    },
    Index(
        7,
    ): Span {
        start: Index(
            10,
        ),
        end: Index(
            10,
        ),
    },
    Index(
        8,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            12,
        ),
    },
    Index(
        9,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            12,
        ),
    },
}
