src/snapshots/alma__parser__tests__test_module_parser__with type variable parameter many branches.snap
---
source: src/parser.rs
assertion_line: 3362
expression: "parse(\"\nmodule Test\n\ntype Fruit a = Banana a | Phone\n\")"
---
Input:


module Test

type Fruit a = Banana a | Phone


Result:

module Test
    exports:

    imports:
        Alma 1:7
            Float 1:7 1:7
            String 1:7 1:7
            Bool 1:7 (True 1:7, False 1:7) 1:7
    type_definitions:
        Fruit 19:24 (a 25:26)
            Banana 29:35 29:37
                a 36:37
            Phone 40:45 40:45
    definitions:




