src/snapshots/alma__parser__tests__test_module_parser__wrong branch separator.snap
---
source: src/parser.rs
assertion_line: 2788
expression: "parse(\"\nmodule Test\n\ntype Fruit = Banana / Apple\n\")"

---
Input:


module Test

type Fruit = Banana / Apple


Result:

:4:20

Expected a definition like `n = 5` or `add x y = x + y` or a type definition like `type User = LoggedIn | Anon`, but instead found: `/`

  2│  module Test
  3│  
  4│  type Fruit = Banana / Apple
   │                      ↑

Error {
    kind: InvalidModuleDefinition,
    token: Token {
        kind: Slash,
        position: 34,
        end_position: 35,
        lexeme: "/",
        line: 4,
        column: 20,
        indent: 0,
    },
}
